Adding secure guardrails